# Go2-x5-Foxy

./: .gitignore  .gitmodules  Instruction.md  README.md  README_CN.md  build.sh  rl_sar.md
deploy/: go2_x5_real.yaml
doc/: README.md  上机验证Checklist.md  实施路线图.md  模式机设计.md  消息协议设计.md  第1轮冻结契约.md  部署配置规范.md  键盘控制问题实验设计.md  项目蓝图.md
policy/go2_x5/: base.yaml
policy/go2_x5/robot_lab/: config.yaml  policy.pt
scripts/: download_inference_runtime.sh  download_mujoco.sh  download_robot_descriptions.sh  nx_sdk_alignment_check.sh  run_hardware_check.sh  setup_arx_can.sh
src/rl_sar/: CMakeLists.txt  package.ros1.xml  package.ros2.xml
src/rl_sar/fsm_robot/: fsm_all.hpp  fsm_b2.hpp  fsm_b2w.hpp  fsm_go2_x5.hpp  fsm_gr1t1.hpp  fsm_gr1t2.hpp  fsm_tita.hpp
src/rl_sar/include/: go2_x5_control_logic.hpp  go2_x5_ipc_protocol.hpp  rl_real_go2_x5.hpp  rl_sim.hpp  rl_sim_mujoco.hpp
src/rl_sar/include/rl_sar/adapters/: arx_adapter.hpp  unitree_adapter.hpp
src/rl_sar/include/rl_sar/adapters/arx/: arx_backend_interface.hpp
src/rl_sar/include/rl_sar/core/: rl_real_go2_x5.hpp  rl_sim.hpp  rl_sim_mujoco.hpp
src/rl_sar/include/rl_sar/diagnostics/: diagnostic_aggregator.hpp  diagnostic_types.hpp  diagnostics_publisher.hpp  drift_data_recorder.hpp  drift_recorder.hpp
src/rl_sar/include/rl_sar/go2x5/: arm_bridge_runtime.hpp  arm_bridge_transport.hpp  arm_controller.hpp  arm_output_guard.hpp  arm_runtime.hpp  arm_transport.hpp  control_logic.hpp  ipc.hpp  ipc_protocol.hpp  operator_control.hpp  safety_guard.hpp  state_manager.hpp
src/rl_sar/include/rl_sar/go2x5/arm/: go2_x5_arm_bridge_runtime.hpp  go2_x5_arm_bridge_transport.hpp  go2_x5_arm_controller.hpp  go2_x5_arm_output_guard.hpp  go2_x5_arm_runtime.hpp  go2_x5_arm_transport.hpp
src/rl_sar/include/rl_sar/go2x5/config/: go2_x5_config.hpp
src/rl_sar/include/rl_sar/go2x5/control/: go2_x5_control_logic.hpp  go2_x5_keyboard.hpp  go2_x5_operator_control.hpp
src/rl_sar/include/rl_sar/go2x5/safety/: go2_x5_safe_shutdown.hpp  go2_x5_safety_guard.hpp
src/rl_sar/include/rl_sar/go2x5/state/: go2_x5_state_manager.hpp
src/rl_sar/include/rl_sar/logger/: event_logger.hpp  event_types.hpp
src/rl_sar/include/rl_sar/observation/: observation_builder.hpp
src/rl_sar/include/rl_sar/protocol/: go2_x5_protocol.hpp  go2_x5_protocol_types.hpp
src/rl_sar/include/rl_sar/runtime/coordinator/: go2_x5_coordinator.hpp  go2_x5_coordinator_types.hpp
src/rl_sar/include/rl_sar/runtime/supervisor/: go2_x5_supervisor.hpp  go2_x5_supervisor_types.hpp
src/rl_sar/include/rl_sar/state_estimation/: velocity_estimator.hpp
src/rl_sar/include/rl_sar/trajectory/: fallback_smoother.hpp
src/rl_sar/launch/: gazebo.launch.py  go2_x5_real_dual.launch.py
src/rl_sar/scripts/: arx_x5_bridge.py  convert_policy.py
src/rl_sar/src/: rl_real_a1.cpp  rl_real_g1.cpp  rl_real_go2.cpp  rl_real_go2_x5.cpp  rl_real_l4w4.cpp  rl_real_lite3.cpp  rl_sim.cpp  rl_sim_mujoco.cpp
src/rl_sar/src/rl_sar/adapters/arx/: arx_adapter.cpp
src/rl_sar/src/rl_sar/adapters/unitree/: unitree_adapter.cpp
src/rl_sar/src/rl_sar/core/: rl_real_go2_x5.cpp  rl_sim.cpp  rl_sim_mujoco.cpp
src/rl_sar/src/rl_sar/diagnostics/: diagnostic_aggregator.cpp  diagnostics_publisher.cpp  drift_data_recorder.cpp  drift_recorder.cpp
src/rl_sar/src/rl_sar/go2x5/arm/: go2_x5_arm_bridge_runtime.cpp  go2_x5_arm_bridge_transport.cpp  go2_x5_arm_controller.cpp  go2_x5_arm_output_guard.cpp  go2_x5_arm_runtime.cpp  go2_x5_arm_transport.cpp
src/rl_sar/src/rl_sar/go2x5/comm/: go2_x5_ipc.cpp  go2_x5_ros.cpp  go2_x5_unitree_comm.cpp
src/rl_sar/src/rl_sar/go2x5/control/: go2_x5_keyboard.cpp  go2_x5_operator_control.cpp
src/rl_sar/src/rl_sar/go2x5/safety/: go2_x5_clip_validation.cpp  go2_x5_limits.cpp  go2_x5_safe_shutdown.cpp  go2_x5_safety_guard.cpp
src/rl_sar/src/rl_sar/go2x5/state/: go2_x5_state_io.cpp  go2_x5_state_management.cpp  go2_x5_state_manager.cpp  go2_x5_utility.cpp
src/rl_sar/src/rl_sar/logger/: event_logger.cpp
src/rl_sar/src/rl_sar/observation/: observation_builder.cpp
src/rl_sar/src/rl_sar/protocol/: go2_x5_protocol.cpp
src/rl_sar/src/rl_sar/runtime/coordinator/: go2_x5_coordinator.cpp
src/rl_sar/src/rl_sar/runtime/supervisor/: go2_x5_supervisor.cpp
src/rl_sar/src/rl_sar/state_estimation/: velocity_estimator.cpp
src/rl_sar/test/: fake_arx_hardware.cpp  test_arm_adapter_contract.cpp  test_arm_transport.cpp  test_config_loader.cpp  test_diagnostic_aggregator.cpp  test_diagnostics_publisher.cpp  test_drift_data_recorder.cpp  test_drift_recorder.cpp  test_event_logger.cpp  test_go2_x5_arm_bridge_defaults.cpp  test_go2_x5_arm_bridge_runtime.cpp  test_go2_x5_arm_lock_defaults.cpp  test_go2_x5_arm_output_guard.cpp  test_go2_x5_arm_runtime.cpp  test_go2_x5_arm_safety_guards.cpp  test_go2_x5_config_split.cpp  test_go2_x5_control_logic.cpp  test_go2_x5_coordinator_contract.cpp  test_go2_x5_deploy_manifest_loader.cpp  test_go2_x5_dog_only_config_contract.cpp  test_go2_x5_freshness_contract.cpp  test_go2_x5_getup_request.cpp  test_go2_x5_ipc_protocol.cpp  test_go2_x5_keyboard_input_contract.cpp  test_go2_x5_keyboard_input_queue.cpp  test_go2_x5_launch_defaults.cpp  test_go2_x5_manifest_contract.cpp  test_go2_x5_protocol_contract.cpp  test_go2_x5_protocol_serialization.cpp  test_go2_x5_runtime_smoke.cpp  test_go2_x5_runtime_validator.cpp  test_go2_x5_safety_guard.cpp  test_go2_x5_startup_safety_contract.cpp  test_go2_x5_supervisor_contract.cpp  test_inference_runtime.cpp  test_joint_mapping_validation.cpp  test_loop_exception_handler.cpp  test_loop_timing_precision.cpp  test_observation_buffer.cpp  test_observation_builder.cpp  (+4 more)
src/rl_sar/test/hardware/: test_hardware_interfaces.cpp
src/rl_sar/test/integration/: test_mocked_control_loop.cpp  test_observation_snapshot.cpp
src/rl_sar/worlds/: earth.world  stairs.world  terrain.world
src/robot_joint_controller/: CMakeLists.txt
src/robot_joint_controller/ros2/include/: robot_joint_controller.hpp  robot_joint_controller_group.hpp
src/robot_msgs/: CMakeLists.txt
src/robot_msgs/msg/: DiagnosticMetrics.msg
(+4 files in other folders)
